# circled-wiki

./: .gitignore  AGENTS.md  CLAUDE.md  HERMES.md  OPERATING_RULES.md  PRODUCT_ENGINEERING_RULES.md  README.md  pyproject.toml
.circled-wiki/: AGENT_BOOTSTRAP.md  AGENT_ROUTER.md  AUTONOMOUS_AGENT_STARTUP.md  GRAPHIFY.md  config.yaml
.circled-wiki/issues/: README.md
.knowledge-os/: AGENT_BOOTSTRAP.md
.serena/: project.yml
UNKNOWN.egg-info/: SOURCES.txt
agent-rules/: README.md  bootstrap-knowledge-os.md  evidence-ingest.md  inbox-capture.md  inbox-inspection.md  knowledge-curation.md  knowledge-query.md  publication.md  repository-engineering.md  runtime-upgrade-verification.md  system-observation.md  workflow-execution.md
docs/: 00-project-charter.md  01-vision.md  02-architecture.md  03-okf-spec.md  04-evidence-model.md  05-hermes-architecture.md  06-knowledge-service.md  07-mcp-spec.md  08-sync-pipeline.md  09-development-roadmap.md  10-obsidian-guidelines.md  11-implementation-guidelines.md  12-runtime-architecture.md  13-future-work.md  14-use-cases-and-flow-diagrams.md  15-implementation-plan.md  16-workflow-execution.md  17-human-guide.md  18-agent-guide.md  19-knowledge-governance.md  20-runbook-refresh.md  21-runbook-learning.md  22-knowledge-quality-and-artifacts.md  23-operational-improvement-plan.md  24-circled-wiki-name-inventory.md  24-legacy-name-inventory.md  25-frontmatter-internationalization.md  26-adr-installed-runtime-distribution.md  26-reference-contract.md  27-operational-pii-remediation-runbook.md  28-operational-improvement-completion-audit.md  29-query-answer-evaluation.md  AI_Circled_Wiki_Build_Plan.md  AI_Knowledge_OS_Build_Plan.md  README.md
knowledge/: README.md  index.md
product-agent-rules/: README.md  bootstrap-circled-wiki.md  deployment-coordination.md  operational-issue-intake.md  release-preparation.md  repository-engineering.md  system-issue-triage.md
workspace/: README.md
(+215 files in other folders)
