[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "circled-wiki"
version = "0.1.0"
description = "Circled Wiki agent-operated knowledge workspace and CLI"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
knowledge-os = "knowledge_os.cli.__main__:main"
circled-wiki = "knowledge_os.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"
